--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,7 +13,7 @@
 }
 
 .card img{
-    max-width: 100%;
+    width: 100%;
     height: 180px;
     object-fit: cover;
     transition: transform ease-out .2s;
