--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
   <body>
     {{ content }}
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", (user) => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
