--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -40,3 +40,26 @@
 .card:hover img {
     transform: scale(119%);
 }
+
+.Donkerblauw {
+    background-color: darkblue;
+}
+
+.Lichtblauw {
+    background-color: lightblue;
+}
+.Geel {
+    background-color: yellow;
+}
+
+.Groen {
+    background-color: green;
+}
+
+.grijs {
+    background-color: lightgray;
+}
+
+.Lichtblauw {
+    background-color: rosybrown;
+}
