Changed color lightblue

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -56,10 +56,10 @@
     background-color: green;
 }
 
-.grijs {
+.Grijs {
     background-color: lightgray;
 }
 
-.Lichtblauw {
+.Rood {
     background-color: rosybrown;
 }
