--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,4 +5,6 @@
     --clr-grey: rgba(78,184,232,255);
     --clr-yellow: rgba(254,202,38,255);
     --clr-red: rgba(243,125,112,255);
+
+    --border-radius: 30px;
   }
