--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,2 +1,23 @@
-<!-- <p>Optie 1</p>
-<p>Optie 2</p> -->
+<!-- <div id="show-nav" class="dropbtn">
+  <div id="dropdown" onmouseover="myFunction(this)">Menu Name</div>
+
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#option1">Option 1</a>
+    <a href="#option2">Option 2</a>
+    <a href="#option3">Option 3</a>
+  </div>
+</div>
+
+<div
+  id="show-nav"
+  class="dropbtn"
+  style="margin-left: 300px; margin-top: -16px"
+>
+  <div id="dropdown" onmouseover="myFunction(this)">Menu Name</div>
+
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#option1">Option 1</a>
+    <a href="#option2">Option 2</a>
+    <a href="#option3">Option 3</a>
+  </div>
+</div> -->
