--- a/_layouts/teammembers.html
+++ b/_layouts/teammembers.html
@@ -2,4 +2,6 @@
 layout: default
 ---
 
-{{content}}
+<h1>{{page.title}}</h1>
+<img src="{{page.photo_url}}" alt="" />
+<p>{{page.summary | markdownify}}</p>
