started with mobile styling

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,10 @@
-<img src="button" alt="" />
 <nav role="navigation">
+  <img src="/assets/images/upload/humanclogoLOWRES.jpg" alt="" />
+  <button class="hamburger hamburger--squeeze" type="button">
+    <span class="hamburger-box">
+      <span class="hamburger-inner"></span>
+    </span>
+  </button>
   <ul>
     <li>
       <a href="#" aria-haspopup="true">Wie wij zijn</a>
@@ -21,3 +26,8 @@
     <li><a href="#">Contact</a></li>
   </ul>
 </nav>
+<img
+  class="extracorner"
+  src="/assets/images/upload/roundedcornerFIRSTDRAFT.png"
+  alt=""
+/>
