--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,10 +1,15 @@
 :root {
     --clr-darkblue: rgba(16,77,152,255);
     --clr-lightblue: rgba(78,184,232,255);
-    --clr-green: rgba(78,184,232,255);
+    --clr-green: rgba(77,175,176,255);
     --clr-grey: rgba(78,184,232,255);
     --clr-yellow: rgba(254,202,38,255);
     --clr-red: rgba(243,125,112,255);
 
     --border-radius: 30px;
+    
+    --spacer-small: 1em;
+    --spacer-medium: 2em;
+    --spacer-large: 3em;
+    --spacer-extralarge: 4em;
   }
