--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2,6 +2,8 @@
 ---
 @import "reset";
 @import "variables";
+@import "typography";
 @import "nav";
+@import "hamburgers";
 @import "main";
 @import "slider";
