--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -3,19 +3,45 @@ a {
 }
 
 nav {
-  font-family: monospace;
+  display: flex;
+  padding: 1em;
+  justify-content: space-between;
+  justify-items: center;
+  justify-self: auto;
+  background: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 2em;
+  z-index: 1000;
+  border-radius: 0px 0px 30px 0px;
+}
+
+.extracorner {
+  position: absolute;
+  top: 92.28px;
+  left: 0;
+  width: 30px;
+  height: 30px;
+}
+
+
+nav img {
+  max-width: 50%;
 }
 
 ul {
-  background: darkorange;
+
   list-style: none;
   margin: 0;
   padding-left: 0;
+  display: none;
+  
 }
 
 li {
-  color: #fff;
-  background: darkorange;
+  color: black;
+
   display: block;
   float: left;
   padding: 1rem;
@@ -25,12 +51,11 @@ li {
 }
   
 li a {
-  color: #fff;
+  color: black;
 }
 
 li:hover,
 li:focus-within {
-  background: red;
   cursor: pointer;
 }
 
@@ -39,15 +64,17 @@ li:focus-within a {
 }
 
 ul li ul {
-  background: orange;
   visibility: hidden;
+  background: white;
   opacity: 0;
-  min-width: 5rem;
+  width: 12rem;
   position: absolute;
   transition: all 0.5s ease;
   margin-top: 1rem;
   left: 0;
+  right: 0;
   display: none;
+  border: black solid 1px;
 }
 
 ul li:hover > ul,
