--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav role="navigation">
+<nav role="navigation" class="extracorner">
   <img src="/assets/images/upload/humanclogoLOWRES.jpg" alt="" />
   <button class="hamburger hamburger--squeeze" type="button">
     <span class="hamburger-box">
@@ -26,8 +26,3 @@
     <li><a href="#">Contact</a></li>
   </ul>
 </nav>
-<img
-  class="extracorner"
-  src="/assets/images/upload/roundedcornerFIRSTDRAFT.png"
-  alt=""
-/>
