--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -12,7 +12,7 @@ nav {
   position: absolute;
   top: 0;
   left: 0;
-  right: 2em;
+  right: 1.5em;
   z-index: 1000;
   border-radius: 0px 0px 30px 0px;
 }
@@ -22,10 +22,12 @@ nav {
   content: '';
   top: 100%;
   left: 0;
-  width: 60px;
+  width: 30px;
   height: 60px;
-  background-image: url('/assets/images/upload/roundedcornerFIRSTDRAFT.png')
-  // clip-path: inset(0% 45% 0% 45% round 100px);
+  border-top-left-radius: 30px;
+  box-shadow: 0 -30px 0 0 white;
+  background: transparant;
+
 }
 
 
