--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,6 +14,12 @@ body {
     padding-bottom: var(--spacer-small);
 }
 
+.vision {
+    color: var(--clr-darkblue);
+    text-align: center;
+    padding: 2em;
+}
+
 
 
 .card {
