--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav role="navigation" class="extracorner">
-  <img src="/assets/images/upload/humanclogoLOWRES.jpg" alt="" />
+  <img src="/assets/images/upload/Logo Human Connection.svg" alt="" />
   <button class="hamburger hamburger--squeeze" type="button">
     <span class="hamburger-box">
       <span class="hamburger-inner"></span>
