--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -6,6 +6,11 @@ body {
 p {
     font-weight: 300;
     line-height: 1.6;
+    color: var(--clr-black);
+}
+
+h2{
+    color: var(--clr-black);
 }
 
 h3{
