--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,11 +1,13 @@
 :root {
-    --clr-darkblue: rgba(16,77,152,255);
+    --clr-darkblue: rgba(21, 63, 143, 1);
     --clr-lightblue: rgba(78,184,232,255);
-    --clr-lightestblue: rgba(237,242,251,255);
-    --clr-green: rgba(77,175,176,255);
+    --clr-lightestblue: rgba(237, 243, 251, 1);
+    --clr-green: rgba(77, 176, 176, 1);
     --clr-grey: rgba(78,184,232,255);
-    --clr-yellow: rgba(254,202,38,255);
+    --clr-light-grey: rgba(244, 244, 246, 1);
+    --clr-yellow: rgba(248, 204, 70, 1);
     --clr-red: rgba(243,125,112,255);
+    --clr-black: rgba(56, 56, 56, 1);
 
     --border-radius: 30px;
 
