--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -45,7 +45,7 @@ ul {
 }
 
 li {
-  color: black;
+  color: var(--clr-black);
 
   display: block;
   float: left;
@@ -56,7 +56,7 @@ li {
 }
   
 li a {
-  color: black;
+  color: var(--clr-black);
 }
 
 li:hover,
@@ -79,7 +79,7 @@ ul li ul {
   left: 0;
   right: 0;
   display: none;
-  border: black solid 1px;
+  border: var(--clr-black) solid 1px;
 }
 
 ul li:hover > ul,
