--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -230,7 +230,7 @@ form {
     margin-top: 2em;
     margin-bottom: 2em;
     max-width: 100%;
-    padding-right: 1em;
+    padding-right: 2.5em;
   }
 
   form input {
@@ -278,6 +278,77 @@ form {
   button[type="submit"] {
     font-weight: 700;
   }
+
+  .did-floating-label-content { 
+    position:relative; 
+    margin-bottom:20px; 
+  }
+  .did-floating-label {
+    color:#1e4c82; 
+    font-size:13px;
+    font-weight:normal;
+    position:absolute;
+    pointer-events:none;
+    left:15px;
+    top:11px;
+    padding:0 5px;
+    background:#fff;
+    transition:0.2s ease all; 
+    -moz-transition:0.2s ease all; 
+    -webkit-transition:0.2s ease all;
+  }
+  .did-floating-input, .did-floating-select {
+
+    display:block;
+    width:100%;
+
+    height:36px;
+    padding: 0 20px;
+    background: #fff;
+    color: var(--clr-black);
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    border-radius: 30px;
+    border: 1px solid rgba(210, 213, 218, 1);
+    &:focus{
+      outline:none;
+      ~ .did-floating-label{
+        top:-8px;
+        font-size:13px;
+      }
+    }
+  }
+  
+  select.did-floating-select {
+    -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+  }
+  select.did-floating-select::-ms-expand {
+    display: none;
+  }
+  
+  .did-floating-input:not(:placeholder-shown) ~ .did-floating-label {
+    top:-8px;
+    font-size:13px;
+  }
+
+  
+  .did-error-input{
+    .did-floating-input, .did-floating-select {
+      border: 2px solid #9d3b3b;
+      color:#9d3b3b;
+    }
+    .did-floating-label{
+      font-weight: 600;
+      color:#9d3b3b;
+    }
+    .did-floating-select:not([multiple]):not([size]) {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='6' viewBox='0 0 8 6'%3E%3Cpath id='Path_1' data-name='Path 1' d='M371,294l4,6,4-6Z' transform='translate(-371 -294)' fill='%239d3b3b'/%3E%3C/svg%3E%0A");
+  }
+  }
+  
 
 
 
@@ -328,4 +399,8 @@ form {
 .card:hover img {
     transform: scale(105%);
 }
+
+
+
+
 
