--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -297,7 +297,7 @@ form {
     margin-bottom:0; 
   }
   .did-floating-label {
-    color:#1e4c82; 
+    color:var(--clr-black); 
     font-size:13px;
     font-weight:normal;
     position:absolute;
