--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,12 @@
-<p>Footer</p>
+<footer>
+  <div class="connect-to-perform">
+    <h2>Doe je mee met onze Connect to Perform Spelavond?</h2>
+    <p class="btn btn-full Lichtblauw">
+      <a href="#">Ik schrijf me in!</a>
+    </p>
+  </div>
+  <div class="Groen footer">
+    <p>Ontwerp: studioryza.nl | Realisatie: Daan Boertien</p>
+    <p>2022 All Rights Reserved | Disclaimer | Cookie Policy | Privacy</p>
+  </div>
+</footer>
