--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -4,18 +4,24 @@ a {
 
 nav {
   display: flex;
-  padding: 1em;
   justify-content: space-between;
   justify-items: center;
   justify-self: auto;
+  padding: 1em;
+  
+  
   background: white;
-  position: absolute;
+  position: sticky;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
   top: 0;
+  width: 85%;
   left: 0;
   right: 1.5em;
   z-index: 1000;
   border-radius: 0px 0px 30px 0px;
 }
+
+
 
 .extracorner::after {
   position: absolute;
