building mobile menu

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,4 +29,11 @@
     </li>
     <li><a href="#">Contact</a></li>
   </ul>
+  <div class="nav-menu">
+    <ul>
+      <li>hoi1</li>
+      <li>hoi2</li>
+      <li>hoi3</li>
+    </ul>
+  </div>
 </nav>
