--- a/_sass/hamburgers.scss
+++ b/_sass/hamburgers.scss
@@ -16,6 +16,7 @@
     color: inherit;
     text-transform: none;
     background-color: transparent;
+    z-index: 1000;
     border: 0;
     margin: 0;
     overflow: visible; }
