--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -17,7 +17,7 @@ nav {
   width: 85%;
   left: 0;
   right: 1.5em;
-  z-index: 1000;
+  z-index: 100;
   border-radius: 0px 0px 30px 0px;
 }
 
@@ -39,6 +39,7 @@ nav {
 
 nav img {
   max-width: 50%;
+  z-index: 100;
 }
 
 nav ul {
@@ -100,4 +101,36 @@ nav ul li ul:focus {
 nav ul li ul li {
   clear: both;
   width: 100%;
+}
+
+
+.nav-menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: -30px;
+  height: 70vh;
+  background: white;
+  color: black;
+  opacity: 0;
+  transition: all 0.2s ease-out;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(-100%);
+}
+
+.nav-menu ul {
+
+  margin-top: 3em;
+  color: black;
+  display: block;
+}
+
+.nav-menu.open {
+  opacity: 1;
+  pointer-events: all;
+  transition: opacity 0.2 ease-out;
+  transform: translateY(0);
 }
