--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -42,7 +42,10 @@ nav img {
   z-index: 100;
 }
 
-nav ul {
+.nav-desktop {
+  display: none;
+}
+.nav-desktop ul {
 
   list-style: none;
   margin: 0;
@@ -51,7 +54,7 @@ nav ul {
   
 }
 
-nav li {
+.nav-desktop li {
   color: var(--clr-black);
 
   display: block;
@@ -62,20 +65,20 @@ nav li {
   transition-duration: 0.5s;
 }
   
-nav li a {
+.nav-desktop li a {
   color: var(--clr-black);
 }
 
-nav li:hover,
-nav li:focus-within {
+.nav-desktop li:hover,
+.nav-desktop li:focus-within {
   cursor: pointer;
 }
 
-nav li:focus-within a {
+.nav-desktop li:focus-within a {
   outline: none;
 }
 
-nav ul li ul {
+.nav-desktop ul li ul {
   visibility: hidden;
   background: white;
   opacity: 0;
@@ -89,16 +92,16 @@ nav ul li ul {
   border: var(--clr-black) solid 1px;
 }
 
-nav ul li:hover > ul,
-nav ul li:focus-within > ul,
-nav ul li ul:hover,
-nav ul li ul:focus {
+.nav-desktop ul li:hover > ul,
+.nav-desktop ul li:focus-within > ul,
+.nav-desktop ul li ul:hover,
+.nav-desktop ul li ul:focus {
    visibility: visible;
    opacity: 1;
    display: block;
 }
 
-nav ul li ul li {
+.nav-desktop ul li ul li {
   clear: both;
   width: 100%;
 }
@@ -109,8 +112,8 @@ nav ul li ul li {
   z-index: 10;
   top: 0;
   left: 0;
-  right: -30px;
-  height: 70vh;
+  right: -28px;
+  height: 50vh;
   background: white;
   color: black;
   opacity: 0;
@@ -124,7 +127,7 @@ nav ul li ul li {
 }
 
 .nav-menu ul {
-
+ 
   margin-top: 3em;
   color: black;
   display: block;
@@ -150,7 +153,7 @@ nav ul li ul li {
 }
 
 .submenu-mobile-toggle.open .submenu-mobile{
-  height: 100%;
+  height: 4em;
   opacity: 1;
   pointer-events: all;
 }
