--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -112,7 +112,7 @@ nav img {
   z-index: 10;
   top: 0;
   left: 0;
-  right: 0px;
+  width: 100vw;
   height: 50vh;
   background: white;
   color: black;
