--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -151,6 +151,17 @@ main {
     padding-top: 4em;
 }
 
+.wiewijzijn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 2em;
+}
+
+.wiewijzijn p {
+    align-self: center;
+}
+
 .wiewijzijntitle {
     color: var(--clr-darkblue);
     margin-top: 2em;
