--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -11,8 +11,7 @@ nav {
   
   
   background: white;
-  position: sticky;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
+  position: absolute;
   top: 0;
   width: 85%;
   left: 0;
