--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -7,6 +7,7 @@ p {
     font-weight: 300;
     line-height: 1.6;
     color: var(--clr-black);
+    margin-top: 0;
 }
 
 h2{
@@ -16,4 +17,5 @@ h2{
 h3{
     color: var(--clr-darkblue);
     margin-bottom: 0;
+    margin-top: 0;
 }
