added margins for h3

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -154,6 +154,10 @@ main {
     padding-bottom: 2em;
 }
 
+.watwijdoenopsomming h3 {
+    margin-top: 1em;
+}
+
 .wwdfirstitem {
     padding-top: 4em;
 }
