added button up

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav role="navigation" class="extracorner">
+<nav role="navigation" class="extracorner" id="nav">
   <img
     class="mainlogo"
     src="/assets/images/upload/Logo Human Connection.svg"
