--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     height: 100%;
@@ -501,4 +504,20 @@ footer h2 {
 .footer p {
     color: white;
     box-shadow: 0px 50px 0px 0px var(--clr-green), -70px 50px 0px 0px var(--clr-green);
+}
+
+main {
+    position: relative;
+}
+#button-omhoog {
+    position: fixed;
+    bottom: 1.5em;
+    right: 1.5em;
+    width: 32px;
+    z-index: 1000;
+    scroll-behavior: smooth;
+}
+
+.button-omhoog-link {
+    opacity: 0;
 }
