--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -10,8 +10,13 @@ p {
     margin-top: 0;
 }
 
+h1 {
+    margin-bottom: 0.5em;
+}
+
 h2{
     color: var(--clr-black);
+    margin-bottom: .5em;
 }
 
 h3{
