--- a/_includes/svg1.html
+++ b/_includes/svg1.html
@@ -1,4 +1,4 @@
-<svg
+<!-- <svg
   id="Laag_1"
   data-name="Laag 1"
   xmlns="http://www.w3.org/2000/svg"
@@ -16,6 +16,28 @@
     <path
       class="cls-1"
       d="M0,92.86C62.56,31.35,104.41,23.9,131.63,29.59c22.1,4.62,38.36,18.67,64.29,14.29,27.25-4.61,46.37-26.43,58.16-43.88V92.86H0"
+    />
+  </g>
+</svg> -->
+
+<svg
+  id="Laag_1"
+  data-name="Laag 1"
+  xmlns="http://www.w3.org/2000/svg"
+  viewBox="0 0 404.76 159.71"
+  preserveAspectRatio="none"
+>
+  <defs>
+    <style>
+      .cls-1 {
+        fill: #4cb0b0;
+      }
+    </style>
+  </defs>
+  <g id="Laag_1-2" data-name="Laag 1">
+    <path
+      class="cls-1"
+      d="M151.37,84.62c103.6-.35,189.71-32.14,253.39-84.62V159.71s-404.76,0-404.76,0c16.68-37.26,56.45-75.08,151.37-75.08Z"
     />
   </g>
 </svg>
