--- a/_includes/svg2.html
+++ b/_includes/svg2.html
@@ -1,4 +1,4 @@
-<svg
+<!-- <svg
   id="Laag_2"
   data-name="Laag 2"
   xmlns="http://www.w3.org/2000/svg"
@@ -16,6 +16,28 @@
     <path
       class="cls-2"
       d="M286.73,0H0C72.66,106.18,97.63,82.43,124.49,76.53c36.26-7.97,69.78-18.21,104.08-16.33,26.26,1.44,42.25,18.88,58.16,38.78"
+    />
+  </g>
+</svg> -->
+
+<svg
+  id="Laag_2"
+  data-name="Laag 2"
+  xmlns="http://www.w3.org/2000/svg"
+  viewBox="0 0 404.76 159.71"
+  preserveAspectRatio="none"
+>
+  <defs>
+    <style>
+      .cls-2 {
+        fill: #f8cb45;
+      }
+    </style>
+  </defs>
+  <g id="Laag_2-2" data-name="Laag 2">
+    <path
+      class="cls-2"
+      d="M151.37,75.08c103.6,.35,189.71,32.14,253.39,84.62V0s-404.76,0-404.76,0C16.68,37.26,56.45,75.08,151.37,75.08Z"
     />
   </g>
 </svg>
