--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -167,9 +167,9 @@ main {
 
 .wiewijzijn {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     padding-bottom: 2em;
+    flex-direction: column;
 }
 
 .wiewijzijn p {
@@ -180,7 +180,7 @@ main {
     color: var(--clr-black);
     margin-top: 2em;
     text-align: center;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
 }
 
 .member-title{
@@ -192,15 +192,25 @@ main {
     margin-bottom: 3em;
 }
 
-.photo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.team-fotos {
+    display: grid;
+    gap: 1.5rem 1.25rem;
+    align-items: start;
+    grid-template-columns: 1fr 1fr;
 }
 
+.team-foto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+    
+
 .photo img {
-    width: 75vw;
-    height: 75vw;
+    width: 100%;
+    aspect-ratio: 1;
     object-fit: cover;
     transition: border-radius 0.2s ease-out;
     border-top-right-radius: var(--border-radius);
