--- a/_includes/svg1.html
+++ b/_includes/svg1.html
@@ -26,6 +26,7 @@
   xmlns="http://www.w3.org/2000/svg"
   viewBox="0 0 404.76 159.71"
   preserveAspectRatio="none"
+  class="svg1"
 >
   <defs>
     <style>
