--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,7 +10,7 @@
     --clr-black: rgba(56, 56, 56, 1);
 
     --border-radius: 30px;
-
+    --border-radius-desktop: 47px;
     --spacer-small: 1em;
     --spacer-medium: 2em;
     --spacer-large: 3em;
