--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,9 @@
     ></script>
   </head>
   <body>
-    {% include nav.html %} {{ content }} {% include footer.html %}
+    <div class="container">
+      {% include nav.html %} {{ content }} {% include footer.html %}
+    </div>
     <script>
       if (window.netlifyIdentity) {
         window.netlifyIdentity.on("init", (user) => {
