--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,14 +13,15 @@ main {
 
 
 .container {
-    // max-width: 1056px;
-    // margin: 0 auto;
-    // box-shadow: 10px 10px 10px rgba(0,0,0,0.25);
+    max-width: 1056px;
+    margin: 0 auto;
+    box-shadow: 0px 10px 10px rgba(0,0,0,0.15);
 }
 
 .innercontainer {
     padding-left: 1em;
     padding-right: 1em;
+    
 }
 .landing {
     display: flex;
@@ -60,9 +61,18 @@ main {
 
  }
 
-
+ .img-overlay-wrap .svg1-desktop{
+    display: none;
+  }
  
- .img-overlay-wrap svg{
+  .actie-image .svg1-desktop{
+     display: none;
+  }
+.birthday {
+    display: none;
+}
+ 
+ .img-overlay-wrap .svg1{
    position: absolute;
    bottom: 0px;
    left: 0;
@@ -71,7 +81,7 @@ main {
    width: 100%;
  }
 
- .actie-image svg{
+ .actie-image .svg1{
     position: absolute;
     top: 0;
     left: 0;
@@ -206,7 +216,7 @@ main {
     text-align: center;
 }
 
-    
+ 
 
 .photo img {
     width: 100%;
@@ -215,6 +225,7 @@ main {
     transition: border-radius 0.2s ease-out;
     border-top-right-radius: var(--border-radius);
     border-bottom-left-radius: var(--border-radius);
+    overflow: hidden;
 }
 
 .photo img:hover {
@@ -222,6 +233,7 @@ main {
     border-bottom-right-radius: var(--border-radius);
     border-top-right-radius: 0px;
     border-bottom-left-radius: 0;
+    
 
 }
 
