added padding to logo

--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -18,6 +18,11 @@
         
     }
 
+    .mainlogo {
+        padding: 1em;
+        padding-bottom: .75em;
+    }
+
     .landing {
     flex-direction: row-reverse;
     
