fixed minor mobile problems

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -79,16 +79,16 @@ main {
    bottom: 0px;
    left: 0;
    z-index: 3;
-   height: 30px;
+   height: 90px;
    width: 100%;
  }
 
- .actie-image .svg1{
+ .actie-image .svg2{
     position: absolute;
     top: 0;
     left: 0;
     z-index: 3;
-    height: 30px;
+    // height: 30px;
     width: 100%;
  }
 
