--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,138 +1,133 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    height: 100%;
-
+  height: 100%;
 }
 
 main {
-    // margin-top: -92px;
+  // margin-top: -92px;
 }
 
-
 .container {
-    max-width: 1056px;
-    margin: 0 auto;
-    box-shadow: 0px 10px 10px rgba(0,0,0,0.15);
+  max-width: 1056px;
+  margin: 0 auto;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
 }
 
 .innercontainer {
-    padding-left: 1em;
-    padding-right: 1em;
-    max-width: 656px;
-    margin: 0 auto;
-    
+  padding-left: 1em;
+  padding-right: 1em;
+  max-width: 656px;
+  margin: 0 auto;
 }
 .landing {
-    display: flex;
-    flex-direction: column-reverse;
-    background-color: var(--clr-green);
-    color: white;
-    padding-bottom: var(--spacer-small);
-    
+  display: flex;
+  flex-direction: column-reverse;
+  background-color: var(--clr-green);
+  color: white;
+  padding-bottom: var(--spacer-small);
 }
 
-.img-overlay-wrap, .actie-image {
+.img-overlay-wrap,
+.actie-image {
+  position: relative;
 
-    position: relative;
- 
-  display: inline-block; 
-  
-   
+  display: inline-block;
 }
 
 .img-overlay-wrap {
-    
-
 }
 
-.img-overlay-wrap img {
-    height: 100%;
-    min-height: 50vh;
-    object-fit: cover;
-
+.img-overlay-wrap img,
+.actie-image img {
+  // height: 100%;
+  // min-height: 50vh;
+  object-fit: cover;
 }
 
-.img-overlay-wrap img, .actie-image img { /* <= optional, for responsiveness */
-    display: block;
-    max-width: 100%;
-    height: auto;
+.img-overlay-wrap img,
+.actie-image img {
+  /* <= optional, for responsiveness */
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
+.img-overlay-wrap .svg1-desktop {
+  display: none;
+}
 
- }
-
- .img-overlay-wrap .svg1-desktop{
-    display: none;
-  }
- 
-  .actie-image .svg1-desktop{
-     display: none;
-  }
+.actie-image .svg1-desktop {
+  display: none;
+}
 .birthday {
-    display: none;
+  display: none;
 }
- 
- .img-overlay-wrap .svg1{
-   position: absolute;
-   bottom: 0px;
-   left: 0;
-   z-index: 3;
-   height: 90px;
-   width: 100%;
- }
 
- .actie-image .svg2{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 3;
-    // height: 30px;
-    width: 100%;
- }
+.img-overlay-wrap .svg1 {
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  z-index: 3;
+  height: 90px;
+  width: 100%;
+}
 
+.actie-image .svg2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  // height: 30px;
+  width: 100%;
+}
 
+.svg2-desktop {
+  display: none;
+}
 
 .landing p {
-    color: white;
-    font-weight: 500;
+  color: white;
+  font-weight: 500;
 }
 
-.vision, .watwijdoen {
-    
-    text-align: center;
-    padding: 2em;
-    padding-bottom: 2em;
+.vision,
+.watwijdoen {
+  text-align: center;
+  padding: 2em;
+  padding-bottom: 2em;
 }
 
-.vision h2{
-    color: var(--clr-black);
+.vision h2 {
+  color: var(--clr-black);
 }
 
 .vision p {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .watwijdoen {
-    color: white;
-    background-color: var(--clr-darkblue);
-    position: relative;
-    border-bottom-right-radius: var(--border-radius);
+  color: white;
+  background-color: var(--clr-darkblue);
+  position: relative;
+  border-bottom-right-radius: var(--border-radius);
 }
 
-.watwijdoen h2{
-    color: white;
+.watwijdoen h2 {
+  color: white;
 }
 
 .watwijdoen p {
-    color: white;
-    font-weight: 500;
+  color: white;
+  font-weight: 500;
 }
 
 .watwijdoen::after {
-    position: absolute;
-  content: '';
+  position: absolute;
+  content: "";
   top: 100%;
   left: 0;
   width: 30px;
@@ -142,415 +137,404 @@ main {
   background: transparant;
 }
 
-.wijzijn{
-    
-    display: flex;
-    flex-direction: column;
+.wijzijn {
+  display: flex;
+  flex-direction: column;
 }
 
-.wijzijn img{
-    max-width: 50vw;
-    margin: 0 auto;
-    
+.wijzijn img {
+  max-width: 50vw;
+  margin: 0 auto;
 }
 
 .wiewijzijn p {
-    font-size: 0.8em;
-    line-height: 1.15;
-    margin-top: .5em;
+  font-size: 0.8em;
+  line-height: 1.15;
+  margin-top: 0.5em;
 }
 
-.waardes{
-    display: flex;
-    flex-direction: column;
+.waardes {
+  display: flex;
+  flex-direction: column;
 }
 
 .watwijdoenopsomming {
-    background-color: var(--clr-lightestblue);
-    margin-top: -3em;
-    // margin-left: -1em;
-    // padding-left: 1em;
-    // margin-right: -1em;
-    // padding-right: 1em;
-    padding-bottom: 2em;
+  background-color: var(--clr-lightestblue);
+  margin-top: -3em;
+  // margin-left: -1em;
+  // padding-left: 1em;
+  // margin-right: -1em;
+  // padding-right: 1em;
+  padding-bottom: 2em;
 }
 
 .watwijdoenopsomming h3 {
-    margin-top: 1em;
+  margin-top: 1em;
 }
 
 .wwdfirstitem {
-    padding-top: 4em;
+  padding-top: 4em;
 }
 
 .wiewijzijn {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 2em;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 2em;
+  flex-direction: column;
 }
 
 .wiewijzijn p {
-    align-self: center;
+  align-self: center;
 }
 
 .wiewijzijntitle {
-    color: var(--clr-black);
-    margin-top: 2em;
-    text-align: center;
-    margin-bottom: 1em;
+  color: var(--clr-black);
+  margin-top: 2em;
+  text-align: center;
+  margin-bottom: 1em;
 }
 
-.member-title{
-    margin-bottom: .5em;
+.member-title {
+  margin-bottom: 0.5em;
 }
 
 .member-function {
-    margin-top: 0;
-    margin-bottom: 3em;
+  margin-top: 0;
+  margin-bottom: 3em;
 }
 
 .team-fotos {
-    display: grid;
-    gap: 1.5rem 1.25rem;
-    align-items: start;
-    grid-template-columns: 1fr 1fr;
+  display: grid;
+  gap: 1.5rem 1.25rem;
+  align-items: start;
+  grid-template-columns: 1fr 1fr;
 }
 
 .team-foto {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
- 
-
 .photo img {
-    width: 100%;
-    aspect-ratio: 1;
-    object-fit: cover;
-    transition: border-radius 0.2s ease-out;
-    border-top-right-radius: var(--border-radius);
-    border-bottom-left-radius: var(--border-radius);
-    overflow: hidden;
+  width: 100%;
+  aspect-ratio: 1;
+  object-fit: cover;
+  transition: border-radius 0.2s ease-out;
+  border-top-right-radius: var(--border-radius);
+  border-bottom-left-radius: var(--border-radius);
+  overflow: hidden;
 }
 
 .photo img:hover {
-    border-top-left-radius: var(--border-radius);
-    border-bottom-right-radius: var(--border-radius);
-    border-top-right-radius: 0px;
-    border-bottom-left-radius: 0;
-    
-
+  border-top-left-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0;
 }
 
-
 .actievraag-content {
-    padding-top: 2em;
-    padding-bottom: 2em;
-    padding-left: 3em;
-    padding-right: 3em;
-    background-color: var(--clr-yellow);
-    color: white;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  padding-left: 3em;
+  padding-right: 3em;
+  background-color: var(--clr-yellow);
+  color: white;
 }
 
 .actievraag p {
-    color: white;
-    
+  color: white;
 }
 
-
-
 .ontdek {
-    font-size: 1.2rem;
-    margin-top: 0.5em;
+  font-size: 1.2rem;
+  margin-top: 0.5em;
 }
 
 .actievraag h2 {
-    margin: 0;
-    color: white;
+  margin: 0;
+  color: white;
 }
 
 .partners h2 {
-    text-align: center;
+  text-align: center;
 
-    margin-bottom: 1em;
-    margin-top: 1.5em;
+  margin-bottom: 1em;
+  margin-top: 1.5em;
 }
 
-
-
 .swiper {
-    max-width: 70vw;
-    margin-bottom: 2em;
+  max-width: 70vw;
+  margin-bottom: 2em;
 }
 
 .contact {
-    background-color: var(--clr-light-grey);
-    margin-left: -1em;
-    margin-right: -1em;
-    padding-top: 1rem;
-    padding-left: 1em;
-    padding-right: 1em;
+  background-color: var(--clr-light-grey);
+  padding-top: 1rem;
 }
 
 .contact h2 {
-    margin-top: 2em;
+  margin-top: 2em;
 }
 
-
+.contact-name,
+.contact-address {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
 
 form {
-    display: flex;
-    flex-direction: column;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    max-width: 100%;
-    // padding-right: 2.5em;
-  }
+  display: flex;
+  flex-direction: column;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  max-width: 100%;
+  // padding-right: 2.5em;
+}
 
-  form input {
-    display: block;
-  }
-  
-  button[type="submit"],
-  input,
-  textarea {
-    font-family: inherit;
-    font-weight: inherit;
-    font-size: inherit;
-    border-radius: 18px;
-    border: 1px solid lightgray;
-    
-  }
+form input {
+  display: block;
+}
 
-  button[type="submit"] {
-    border-radius: 30px;
-    margin-bottom: 3em;
-  }
-  
-  input,
-  textarea {
-    margin-bottom: 1em;
-  }
+button[type="submit"],
+input,
+textarea {
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  border-radius: 18px;
+  border: 1px solid lightgray;
+}
+
+button[type="submit"] {
+  border-radius: 30px;
+  margin-bottom: 3em;
+}
+
+input,
+textarea {
+  margin-bottom: 1em;
+}
 
 //   input[type="text"], input[type="email"] {
-    // width: calc(100% - 2.75em);
+// width: calc(100% - 2.75em);
 //   }
-  
-  textarea {
-    margin-bottom: 2em;
-    resize: vertical;
-    padding-top: 3em;
-    min-height: 200px;
-    display: inline-block;
+
+textarea {
+  margin-bottom: 2em;
+  resize: none;
+  padding-top: 3em;
+  min-height: 200px;
+  display: inline-block;
+}
+
+label {
+  color: var(--clr-black);
+  margin-bottom: 0.2em;
+}
+
+form button {
+  color: white;
+  padding: 0.75em 1em;
+  background-color: var(--clr-darkblue);
+  font-weight: 700;
+}
+
+button[type="submit"] {
+  font-weight: 700;
+  margin-left: auto;
+}
+
+.did-floating-label-content {
+  position: relative;
+  margin-bottom: 0;
+}
+.did-floating-label {
+  color: var(--clr-black);
+  font-size: 13px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 15px;
+  top: 11px;
+  padding: 0 5px;
+  background: #fff;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+.did-floating-input,
+.did-floating-select {
+  display: block;
+  width: calc(100% - 2.75em);
+
+  height: 36px;
+  padding: 0 20px;
+  background: #fff;
+  color: var(--clr-black);
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  border-radius: 20px;
+  border: 1px solid rgba(210, 213, 218, 1);
+  &:focus {
+    outline: none;
+    ~ .did-floating-label {
+      top: -8px;
+      font-size: 13px;
+    }
   }
-  
-  label {
-    color: var(--clr-black);
-    margin-bottom: 0.2em;
-  }
+}
 
+textarea.did-floating-input {
+  padding-top: 1em;
+}
 
-  form button {
-    color: white;
-    padding: 0.75em 1em;
-    background-color: var(--clr-darkblue);
-    font-weight: 700;
-  }
+.did-floating-input:not(:placeholder-shown) ~ .did-floating-label {
+  top: -8px;
+  font-size: 13px;
+}
 
-  button[type="submit"] {
-    font-weight: 700;
-    margin-left: auto;
-  }
-
- 
-
- 
-
-  .did-floating-label-content { 
-    position:relative; 
-    margin-bottom:0; 
+.did-error-input {
+  .did-floating-input,
+  .did-floating-select {
+    border: 2px solid #9d3b3b;
+    color: #9d3b3b;
   }
   .did-floating-label {
-    color:var(--clr-black); 
-    font-size:13px;
-    font-weight:normal;
-    position:absolute;
-    pointer-events:none;
-    left:15px;
-    top:11px;
-    padding:0 5px;
-    background:#fff;
-    transition:0.2s ease all; 
-    -moz-transition:0.2s ease all; 
-    -webkit-transition:0.2s ease all;
+    font-weight: 600;
+    color: #9d3b3b;
   }
-  .did-floating-input, .did-floating-select {
-
-    display:block;
-    width: calc(100% - 2.75em);
-
-    height:36px;
-    padding: 0 20px;
-    background: #fff;
-    color: var(--clr-black);
-    font-family: inherit;
-    font-weight: inherit;
-    font-size: inherit;
-    border-radius: 20px;
-    border: 1px solid rgba(210, 213, 218, 1);
-    &:focus{
-      outline:none;
-      ~ .did-floating-label{
-        top:-8px;
-        font-size:13px;
-      }
-    }
+  .did-floating-select:not([multiple]):not([size]) {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='6' viewBox='0 0 8 6'%3E%3Cpath id='Path_1' data-name='Path 1' d='M371,294l4,6,4-6Z' transform='translate(-371 -294)' fill='%239d3b3b'/%3E%3C/svg%3E%0A");
   }
+}
 
-  textarea.did-floating-input {
-    padding-top: 1em;
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  img {
+    width: 50vw;
+    margin: 2em auto 3em;
   }
-  
-
-  
-  .did-floating-input:not(:placeholder-shown) ~ .did-floating-label {
-    top:-8px;
-    font-size:13px;
-  }
-
-  
-  .did-error-input{
-    .did-floating-input, .did-floating-select {
-      border: 2px solid #9d3b3b;
-      color:#9d3b3b;
-    }
-    .did-floating-label{
-      font-weight: 600;
-      color:#9d3b3b;
-    }
-    .did-floating-select:not([multiple]):not([size]) {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='6' viewBox='0 0 8 6'%3E%3Cpath id='Path_1' data-name='Path 1' d='M371,294l4,6,4-6Z' transform='translate(-371 -294)' fill='%239d3b3b'/%3E%3C/svg%3E%0A");
-  }
-  }
-  
-
-
+}
 
 .card {
-    background: #0bbbb4;
-    color: white;
-    max-width: 200px;
-    // margin-inline: auto;
-    margin-top: 3em;
-    line-height: 1;
-    font-family: 'Inter Tight', sans-serif;
-    font-weight: 200;
-    border-radius: 0px var(--border-radius) 0px var(--border-radius);
-    overflow: hidden;
-    transition: border-radius 0.2s ease-out;
-
+  background: #0bbbb4;
+  color: white;
+  max-width: 200px;
+  // margin-inline: auto;
+  margin-top: 3em;
+  line-height: 1;
+  font-family: "Inter Tight", sans-serif;
+  font-weight: 200;
+  border-radius: 0px var(--border-radius) 0px var(--border-radius);
+  overflow: hidden;
+  transition: border-radius 0.2s ease-out;
 }
 
 .card:hover {
-    border-radius: var(--border-radius) 0px var(--border-radius) 0px;
+  border-radius: var(--border-radius) 0px var(--border-radius) 0px;
 }
 
-.card img{
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-    transition: transform ease-out .2s;
+.card img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  transition: transform ease-out 0.2s;
 }
 
 .card-image {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .card .bold {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .card-content {
-    padding-top: 1em;
-    padding-left: 1em;
-    padding-bottom: 1em;
-    z-index: 2;
+  padding-top: 1em;
+  padding-left: 1em;
+  padding-bottom: 1em;
+  z-index: 2;
 }
 
 .card:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 .card:hover img {
-    transform: scale(105%);
+  transform: scale(105%);
 }
 
-main ul{
-    line-height: 1.3;
-    font-weight: 300;
-    list-style:none;
+main ul {
+  line-height: 1.3;
+  font-weight: 300;
+  list-style: none;
 }
 
 main li {
-    margin-bottom: 1em; 
-    position: relative;
+  margin-bottom: 1em;
+  position: relative;
 }
 
 main li::before {
-    position: absolute;
-    content: '';
-    background: center/contain no-repeat url('/assets/images/ul-arrow.svg') ;
-    color: var(--clr-black);
-    left: -14px;
-    width: 4.6392px;
-    height: 8px;
-    top: 6px;
+  position: absolute;
+  content: "";
+  background: center/contain no-repeat url("/assets/images/ul-arrow.svg");
+  color: var(--clr-black);
+  left: -14px;
+  width: 4.6392px;
+  height: 8px;
+  top: 6px;
 }
 
 .connect-to-perform {
-    background: var(--clr-darkblue);
-    border-bottom-left-radius: var(--border-radius);
-    box-shadow: -70px 0px 0px 0px var(--clr-green), -70px 1px 0px 0px var(--clr-green);
-    margin-left: 2em;
-    padding-top: 2em;
-    padding-left: 2em;
-    z-index: 2;
-    padding-bottom: 1em;
+  background: var(--clr-darkblue);
+  border-bottom-left-radius: var(--border-radius);
+  //   box-shadow: -70px 0px 0px 0px var(--clr-green),
+  //     -70px 1px 0px 0px var(--clr-green);
+  margin-left: 2em;
+  padding-top: 2em;
+  padding-left: 2em;
+  z-index: 2;
+  padding-bottom: 1em;
 }
 
-
 footer h2 {
-    color: white;
+  color: white;
 }
 
 .footer {
-    padding-top: 2em;
-    padding-left: 2em;
-    color: white;
+  padding-top: 2em;
+  padding-left: 2em;
+  color: white;
+
+  &-menu {
+    display: none;
+  }
 }
 
 .footer p {
-    color: white;
-    box-shadow: 0px 50px 0px 0px var(--clr-green), -70px 50px 0px 0px var(--clr-green);
+  color: white;
+  box-shadow: 0px 50px 0px 0px var(--clr-green),
+    -70px 50px 0px 0px var(--clr-green);
 }
 
 main {
-    position: relative;
+  position: relative;
 }
 #button-omhoog {
-    
-    width: 32px;
-    z-index: 1000;
-    scroll-behavior: smooth;
+  width: 32px;
+  z-index: 1000;
+  scroll-behavior: smooth;
 }
 
 .button-omhoog-link {
-    opacity: 0;
-    transform: translateY(100px);
-    position: fixed;
-    bottom: 1.5em;
-    right: 1.5em;
-    z-index: 1000;
+  opacity: 0;
+  transform: translateY(100px);
+  position: fixed;
+  bottom: 1.5em;
+  right: 1.5em;
+  z-index: 1000;
 }
